# user-deployments-examples

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: increment-tag-dev.yml  increment-tag-main.yml  run-unit-tests.yml
cbr_xyz/utils/: Version.py
tests/unit/utils/: test_Version.py
user_deployment_examples/providers/render/: cbr_website__app.py  requirements.txt
user_deployment_examples/utils/: Version.py
