[tool.poetry]
name        = "cbr_xyz"
version     = "v0.2.1"
description = "CBR - XYZ"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-xyz"
repository  = "https://github.com/the-cyber-boardroom/cbr-xyz"

[tool.poetry.dependencies]
python          = "^3.7"
osbot-utils     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
