[tool.poetry]
name        = "user_deployment_examples"
version     = "v0.0.2"
description = "CBR - User Deployment Examples"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/user_deployment_examples"
repository  = "https://github.com/the-cyber-boardroom/user_deployment_examples"

[tool.poetry.dependencies]
python          = "^3.10"
osbot-utils     = "*"
cbr_website_beta = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
